# SmartCAM

./: .gitignore  CLAUDE.md  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/smartcam/: CameraStreamService.kt  DeviceCapabilities.kt  H264Encoder.kt  MainActivity.kt  StreamServer.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docs/: BUILD_AND_TEST.md
protocol/: wire_format.md
windows/: CMakeLists.txt  CMakePresets.json
windows/SmartCAMHost/: CMakeLists.txt
windows/SmartCAMHost/src/: adb_manager.cpp  adb_manager.h  h264_decoder.cpp  h264_decoder.h  main.cpp  stream_receiver.cpp  stream_receiver.h  tray.cpp  tray.h
windows/SmartCAMVCam/: CMakeLists.txt
windows/SmartCAMVCam/src/: SmartCAMVCam.def  class_factory.cpp  class_factory.h  dllmain.cpp  media_source.cpp  media_source.h  vcam_guids.h
windows/shared/src/: shared_frame_buffer.h  wire_protocol.h
